<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.addmilestone.AddMilestoneActivity"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/new_event_title"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!-- EditText for getttaskEntrytask description input -->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMilestoneTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/title_hint_milestone"
                    android:paddingBottom="@dimen/activity_horizontal_margin" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textViewEventType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/event_type_title"
                android:textAlignment="center"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="30dp"
                android:layout_marginBottom="4dp"
                android:layout_marginRight="30dp"
                android:background="@color/colorGray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMilestoneType"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:clipToPadding="false"
                android:scrollbars="vertical"
                tools:listitem="@layout/item_types" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/message_hint_milestone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDescriptionMilestone"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:gravity="start"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorGray" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_calendar_black"
                    android:drawablePadding="8dp"
                    android:focusableInTouchMode="false"
                    android:gravity="start"
                    android:hint="@string/date_hint"
                    android:inputType="date"
                    android:paddingStart="8dp"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_time"
                    android:drawablePadding="8dp"
                    android:focusableInTouchMode="false"
                    android:gravity="start"
                    android:hint="@string/time_hint"
                    android:inputType="time"
                    android:paddingStart="8dp"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    tools:ignore="RtlSymmetry" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/okButton"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:text="@string/ok_button"
                android:textColor="@android:color/primary_text_dark" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>