<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/itemEdit"
        android:title="@string/edit_menu"
        android:icon="@drawable/ic_edit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/itemDelete"
        android:title="@string/delete_menu"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom" />

</menu>